@@ -32,7 +32,8 @@
 			New Section adds a section to the manpage.<br>
 			<s>New From Template opens a template file installed in PREFIX/share/ManPageEditor/examples, you can change this template to suit your tastes or replace it with your own template, at some future stage I will add more templates and possibly add a template folder.</s><br>
 			Open opens a manpage file.<br>
-			<s>Open opens a system install manpage by name.</s><br>
+			Open opens a system install manpage by name.<br>
+			<img src="syspage.png" alt="syspage.png" title="syspage.png"><br>
 			Preview Manpage will preview the manpage in ( at the moment ) xterm, the terminal to be used will be set in prefs.<br>
 			Save/Save As/Print/Quit and Close are standard.<br>
 
@@ -69,7 +70,6 @@ Simple text formatting is done via the 'Formatting' menu just select a piece of 
 			Highlight line.<br>
 			Wrap lines.<br>
 			<br>
-			Import system manpage by name.<br>
 			Spell check.<br>
 			Add template(s).<br>
 			Unzip page if needed.<br>
