@@ -29,10 +29,11 @@ class ManpageConvertClass
 		ManpageConvertClass(ManPageEditorQT *mainclass);
 		~ManpageConvertClass();
 
-		QString			manString=R"foo("myprogram" "1" "0.0.0" "Me" "My set of programs")foo";
+		QString	manString=R"foo("myprogram" "1" "0.0.0" "Me" "My set of programs")foo";
 
-		void				importManpage(QString filepath);
-		void				exportManpage(QString filepath);
+		void		importManpage(QString filepath);
+		void		exportManpage(QString filepath);
+		QString	buildOpenSystemPage(void);
 
 	private:
 		ManPageEditorQT	*mainClass=NULL;
