@@ -1,4 +1,5 @@
 0.1.0
+Done open system manpage.
 Done edit menu.
 Added help.
 Now usable.
